# computational-statistics-assignment-permABC

./: .gitignore  CLAUDE 2.md  CLAUDE.md  LICENCE  README.md  old_requirements.txt  pyproject.toml  regenerate_all_figures.sh  requirements.txt  setup.py  wabc.ipynb
.claude/: settings.local.json
experiments/notebooks/: Gaussian_correlated.ipynb  Gaussian_no_summary.ipynb  analyse_output_perm_vs_osum.ipynb  compare_hilbert_wasserstein.ipynb  hilbert_vs_hilbert.ipynb  reproduce_fig4_swapping.ipynb  swap_distance.ipynb  test_time_permSMC_OS_UM.ipynb  test_toy_model_robin.ipynb
experiments/results/: assignment_benchmark_report.aux  assignment_benchmark_report.tex
experiments/scripts/: abc_gibbs_gaussian.py  abc_gibbs_sir 2.py  abc_gibbs_sir.py  analyze_hamming_swap 2.py  bench_sir_jax_vs_numba.py  benchmark_kl_full.py  diagnostics.py  explore_metrics_vs_epsilon.py  generate_benchmark_figures.py  plot_config 2.py  run_assignment_benchmark.py  run_figures 2.sh  run_outlier_sweep 2.py  run_performance_comparison copy.py  run_performance_comparison.py  run_sir_real_world.py  run_sir_synthetic_validation.py  run_smc_assignment_benchmark 2.py  run_solver_final_benchmark.py  simple_batch.sh
my-reproduces/: README.md  repro_io.py  repro_metrics.py  repro_models_gk.py  run_stability_accuracy.py
my-reproduces/data/: df_weather_clean.csv
my-reproduces/results/: compare_all_K4_N80_per_seed.csv  compare_all_K4_N80_summary.json  gk_K6_N250_per_seed.csv  gk_K6_N250_summary.json  gk_K8_N1000_per_seed.csv  gk_K8_N1000_summary.json
my-reproduces/scripts_real_world/: README.md  abc_gibbs_weather.py  plot_weather_rain_probability.py  run_weather_rain_probability.py  run_weather_real_world_reproduce.py  validate_bernoulli_model.py
my-reproduces/scripts_simulation/: plot_performance_comparison_simulation.py  repro_models_lotka.py  repro_runner.py  run_method_comparisons.py  run_performance_comparison_simulation.py
paper/: arxiv.tex  biometrika.bst  cover_letter_biometrika.tex  news 2.aux  news.tex  news.toc  permABC 2.bib  permABC 2.synctex(busy)  permABC.bbl  permABC.tex  permABC.thm  reject_letter 2.tex  resubmission 2.aux  resubmission 2.bbl  resubmission.blg  resubmission.tex  review_jasa_mock.tex  styleguide.tex  test.tex
paper/preamble/: defs.tex  packages.tex
permabc/: __init__.py  setup.py
permabc/core/: lsa.py  (+12 more)
tests/: test_algorithms.py  test_kernels.py  test_models.py
(+113 files in other folders)
